# tcl-duktape

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile  Makefile.in  README.md  acinclude.m4  aclocal.m4  autogen.sh  build.tcl  configure  configure.ac  configure.tcl  duktcl.c  libtclduktape.syms.in  libtclduktape.vers  oo.tcl  pkgIndex-libdir.tcl  pkgIndex.tcl  pkgIndex.tcl.in  sl.tcl  tcl-duktape.c  tests.tcl  utils.tcl
.circleci/: config.yml
.github/workflows/: ci.yml  prepare.sh  test.sh
aclocal/: shobj.m4
generic/: tcl-duktape.c
lib/: oo.tcl  pkgIndex-libdir.tcl  pkgIndex.tcl  pkgIndex.tcl.in  tcl-duktape.c  utils.tcl
tclconfig/: tcl.m4
tests/: all.tcl
